# collect-proofs-telegram-bot

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
